--- a/blender/src/style.css
+++ b/blender/src/style.css
@@ -15,6 +15,7 @@ body {
   top: 0;
   left: 0;
   outline: none;
+  opacity: 0;
 }
 
 .container {
@@ -23,9 +24,35 @@ body {
   flex-direction: column;
   gap: 1.25rem;
   right: 25%;
-  z-index: 999;
+  z-index: 10;
 
   /* animation start */
   opacity: 0;
   top: 50%; /* goal 40% */
+}
+
+.progress-bar-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+#progress-bar {
+  width: 30%;
+  margin-top: 0.5%;
+  height: 2%;
+}
+
+label {
+  color: white;
+  font-size: 2rem;
 }
